--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             <button class="btn btn-out-dashed btn-square text-uppercase">
               IT is a good time for the great taste of bargers
             </button>
-            <h1 class="col-md-6 text-uppercase header-heading shodow">
+            <h1 class="col-md-6 text-uppercase header-heading shodows">
               Burger
             </h1>
-            <h1 class="shodow" style="font-size: 55px; margin-top: -20px">
+            <h1 class="shodows" style="font-size: 55px; margin-top: -20px">
               WEEK
             </h1>
           </div>
@@ -310,9 +310,9 @@
         </div>
       </div>
     </div>
-    <div class="container overflow-hidden" id="Our_story">
-      <div class="row">
-        <div class="card shadow border-0 _1hs7">
+    <div class="container overflow-hidden shadow" id="Our_story">
+      <div class="row  ">
+        <div class="card border-1 _1hs7">
           <div class="col-sm-12 col-md-6">
             <p
               class="text-uppercase mt-3"
