--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             >
           </div>
 
-          <div class="btn-login">Express Delivery (+91)6748901123</div>
+          <div class="btn-login"><img src="img/fast-delivery.png" alt=""width="40 "height="40" > Express Delivery (+91)6748901123</div>
           <button
             class="navbar-toggler shadow-none"
             type="button"
